--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NextActivity"></activity>
-
+        <activity android:name=".NextActivity"/>
         <service android:name=".BackgroundService" />
-
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop">
